grammar.js
    source_file: $ => seq(
      optional($.module_header),
      optional($.module_path),
      repeat($._module_element),
    ),

    _module_element: $ => choice(
      $.import_declaration,
      $.module_declaration,
      $.typeclass_declaration,
      $.impl_declaration,
      $.function_declaration,
      $.macro_declaration,
      $.const_declaration,
      $.static_declaration,
      $.type_declaration,
      $.struct_declaration,
      $.union_declaration,
      $.enum_declaration,
    ),

    impl_declaration: $ => seq(
      "impl",
      optional($.generic_parameters),
      choice(
        seq(
          "for",
          $.identifier,
          "{",
          repeat($.impl_item),
          "}",
        ),
        seq(
          $._type_name_spec,
          "for",
          $._type,
          "{",
          repeat($.function_declaration),
          "}",
        ),
      ),
    ),

    function_declaration: $ => seq(
      "fn",
      optional($.attribute_list),
      optional($.generic_parameters),
      $.identifier,
      $.parameter_list,
      optional($.return_type),
      choice(";", $.comp_statement),
    ),

    const_declaration: $ => prec(1, seq(
      "const",
      optional($.generic_parameters),
      $.identifier,
      optional(seq(":", $._type)),
      "=",
      $._expression,
      ";",
    )),

    static_declaration: $ => seq(
      "static",
      optional($.attribute_list),
      choice(
        $.identifier,
        seq("const", $.identifier),
      ),
      optional(seq(":", $._type)),
      optional(seq("=", $._expression)),
      ";",
    ),

    generic_parameters: $ => seq(
      "<",
      comma_separated($._generic_parameter),
      ">",
    ),

    _generic_parameter: $ => choice(
      $._typevarspec,
      $.generic_parameter_spec,
    ),

    typevarspec_literal_type: $ => seq(
      $.type_identifier,
      "@",
      choice("int", "bool"),
    ),

    parameter_list: $ => seq(
      "(",
      comma_separated($._expression),
      ")",
    ),

    return_type: $ => seq(
      "->",
      $._type,
    ),

    comp_statement: $ => seq(
      "{",
      repeat($._statement),
      "}",
    ),

    _statement: $ => choice(
      $.enum_declaration,
      $.struct_declaration,
      $.union_declaration,
      $.const_declaration,
      $.type_declaration,
      $.static_declaration,
      $.let_statement,
      $.for_statement,
      $.match_statement,
      $.do_while_statement,
      $.while_statement,
      $.if_statement,
      $.goto_statement,
      $.break_statement,
      $.continue_statement,
      $.return_statement,
      $.label_statement,
      $.comp_statement,
      $.expression_statement,
    ),

    goto_statement: $ => seq(
      "goto",
      $._expression,
      ";",
    ),

    _expression: $ => choice(
      $.let_expression,
      $.case_expression,
      $.function_expression,
      $.macro_expression,
      $._binary_expression,
    ),

    _postfix_expression: $ => prec.right(choice(
      $._primary_expression,
      $.postfix_ref_expression,
      $.postfix_deref_expression,
      $.postfix_inc_expression,
      $.postfix_dec_expression,
      $.annotation_expression,
      $.arrow_expression,
      $.dot_expression,
      $.function_call_expression,
      $.subscript_expression,
      $.macro_call_expression,
    )),

    annotation_expression: $ => prec.right(seq($._postfix_expression, ":", $._type)),

    parenthesized_expression: $ => choice(
      seq("(", ")"),
      seq("(", $._expression, ")"),
      seq("(", $._expression, ",", comma_separated($._expression), ")"),
      seq("(", $.comp_statement, ")"),
    ),

    _type_name_spec: $ => choice(
      $.type_identifier,
      $.type_instantiation,
      $.type_path,
    ),

    _type: $ => prec.right(choice(
      $._type_name_spec,
      $._type_literal,
      $.type_short_instantiation,
      $.enum_type,
      $.struct_type,
      $.union_type,
      $.type_function,
      $.type_grouped,
      $.type_tuple,
      $._type_bracket,
      $.type_in_expression,
      $.prefix_ref_type,
      $.postfix_ref_type,
    )),

    type_tuple: $=> seq(
      "(", 
      optional(seq($._type, ",", comma_separated($._type))),
      ")"
    ),

    type_array: $ => seq(
      "[",
      optional("const"),
      $._type,
      ";",
      $._type,
      "]",
    ),

    _common_identifier: _ => token(/[A-Za-z_][A-Za-z0-9_]*/),
    type_identifier: $ => $._common_identifier,
    identifier: $ => $._common_identifier,
    integer_literal: _ => token(/(0[xX][0-9A-Fa-f]+|0[bB][01]+|0[oO]?[0-7]+|[1-9][0-9]*|0)([uU]?([lL]|[hH]{1,2}|[zZ])?)?/),
    float_literal: _ => token(/[0-9]+\.[0-9]+([lL]?[fF])?/),
    char_literal: _ => token(/'([^'\\]|\\x[0-9A-Fa-f]+|\\.)'/),
    string_literal: _ => token(/"([^"\\]|\\.)*"/),
    boolean_literal: _ => choice("true", "false"),
  },

});
