test/corpus/test_module_level.txt
======================
function declaration
======================
fn main() -> ();
---
(source_file
    (function_declaration
      (identifier)
      (parameter_list)
      (return_type
        (type_tuple))))

======================
generic function declaration
======================
fn<T, L@int> foo(a: [T; L]);
---
(source_file
    (function_declaration
      (generic_parameters
        (type_identifier)
        (typevarspec_literal_type
          (type_identifier)))
      (identifier)
      (parameter_list
        (annotation_expression
          (identifier)
          (type_array
            (type_identifier)
            (type_identifier))))))

======================
impl for type
======================
impl<T, L@int> for array {}
---
(source_file
  (impl_declaration
    (generic_parameters
      (type_identifier)
      (typevarspec_literal_type
        (type_identifier)))
    (identifier)))

======================
static
======================
static foo: int = 3;
---
(source_file
  (static_declaration
    (identifier)
    (type_identifier)
    (integer_literal)))
